# haskellprojects

./: .gitignore
diploma/: diploma.cabal  stack.yaml
diploma/src/: Plugin.hs
diploma/test/: Spec.hs
exercises/: exercises.cabal  stack.yaml
exercises/src/: BasicTypeLevelSet.hs  Lib.hs  Plugins.hs  TestingOClock.hs
plugin/: .gitignore  README.md  plugin.cabal  stack.yaml
plugin/src/: OClockPlugin.hs
plugin/test/: Spec.hs
