name:           exercises
version:        0.1.0.0

homepage:       https://github.com/githubuser/exercises#readme
author:         Alice Koroleva
maintainer:     alicekoroleva239@gmail.com
copyright:      2018 Alice Koroleva
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/githubuser/exercises

library
  hs-source-dirs:
      src
  build-depends:
      base >= 4.7 && < 5, inspection-testing, ghc-typelits-natnormalise
  exposed-modules:
      Lib BasicTypeLevelSet TypeRepTest
  ghc-options: -Wall
  default-language: Haskell2010

test-suite exercises-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  build-depends:
      base >= 4.7 && < 5
    , exercises
  default-language: Haskell2010
