name:           plugin
version:        0.1.0.0

homepage:       https://github.com/fmixing/haskellprojects/plugin
author:         Alice Koroleva
maintainer:     alicekoroleva239@gmail.com
copyright:      2018 Alice Koroleva
build-type:     Simple
extra-source-files:  README.md
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/fmixing/haskellprojects/plugin

library
  hs-source-dirs:
      src
  build-depends:
      base >= 4.7 && <5, ghc-tcplugins-extra, ghc, o-clock
  exposed-modules:
      OClockPlugin
  ghc-options: -Wall
  default-language: Haskell2010

test-suite plugin-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  build-depends:
      base >=4.7 && <5
    , plugin
    , o-clock
  default-language: Haskell2010
